[package]
name = "rustcoalescence"
version = "0.1.0"
authors = ["Momo Langenstein <momo.langenstein17@imperial.ac.uk>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

necsim-partitioning-mpi = ["rustcoalescence-cli/necsim-partitioning-mpi"]

rustcoalescence-algorithms-monolithic = ["rustcoalescence-cli/rustcoalescence-algorithms-monolithic"]
rustcoalescence-algorithms-independent = ["rustcoalescence-cli/rustcoalescence-algorithms-independent"]
rustcoalescence-algorithms-cuda = ["rustcoalescence-cli/rustcoalescence-algorithms-cuda"]

[dependencies]
rustcoalescence-cli = { path = "cli" }
rustcoalescence-derive = { path = "derive" }

anyhow = "1.0"
